<resources>
    <string name="app_name">AI Mentor</string>

    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="submit">Submit</string>
    <string name="x_icon">{gmi-close}</string>

    <string name="copy_link">Copy link</string>
    <string name="share_link">Share link</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard.</string>

    <string name="stop_speaking">Stop speaking</string>

    <string name="chat_empty_state_message">
        Share your thoughts below and hit {gmi-mail-send}
        to start chatting with AI Mentor!
    </string>
    <string name="comment_composer_hint">Type in your thoughts here</string>
    <string name="blank_input_error">Your thoughts cannot be blank.</string>

    <string name="talk">Talk</string>
    <string name="mic_icon">{gmi-mic}</string>
    <string name="talk_empty_state_message">
        Tap the {gmi-mic} button below to start talking to AI Mentor!
    </string>

    <string name="wait_for_response_error">
        Please wait for AI Mentor to respond before sharing more thoughts.
    </string>
    <string name="send_icon">{gmi-mail-send}</string>
    <string name="copy_icon">{gmi-copy}</string>

    <string name="text_options_dialog_title">Text Options</string>
    <array name="conversation_text_options">
        <item>Copy</item>
        <item>Share</item>
        <item>Speak</item>
    </array>

    <string name="chatgpt_thinking_message">
        Please wait as AI Mentor is figuring out the best response&#8230;
    </string>
    <string name="chatgpt_error">
        AI Mentor failed to return a response.
        Please try again later.
    </string>

    <string name="text_successfully_copied">Text copied to your clipboard.</string>
    <string name="ai_mentor_text_label">AI Mentor text</string>
    <string name="share_text_with">Share text with</string>

    <string name="please_rate">
        Hey, it looks like you\'re a frequent user of AI Mentor!
        If you have a couple seconds, please rate this app in the Google Play Store.
        Every rating goes a long way towards helping us grow and improve the app!
    </string>
    <string name="will_rate">Sure, I\'ll help</string>
    <string name="no_im_good">No, I\'m good</string>

    <string name="initial_ai_priming_message">
        You are a career coach for a %s.
    </string>
    <string name="worker_component">
        %1$s with %2$s of experience
    </string>
    <string name="student_component">
        student studying %s
    </string>
    <string name="x_years">%d years</string>
    <string name="one_year">1 year</string>
    <string name="job_searching_addendum">
        They are currently looking for a job.
    </string>
    <string name="focusing_message_for_ai">
        When giving advice with multiple suggestions, keep it concise and only present the Top 3.
        If you don\'t have enough information to give specific answers,
        ask for more context about their situation.
    </string>

    <string name="chat">Chat</string>
    <string name="chat_icon">{gmi-comments}</string>
    <string name="profile_icon">{gmi-account-circle}</string>
    <string name="settings_icon">{gmi-settings}</string>
</resources>
