<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/screen_background"
    tools:ignore="SpUsage"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/welcome_robot_animation"
            android:layout_width="256dp"
            android:layout_height="256dp"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lottie_robot_welcome"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.mikepenz.iconics.view.IconicsTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"
            android:text="@string/chat_empty_state_message"
            android:textSize="19sp"
            android:textColor="@color/text_normal"
            android:paddingHorizontal="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conversation_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingVertical="6dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_divider_color"
        />

    <LinearLayout
        android:id="@+id/comment_composer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="12dp"
            android:inputType="textCapSentences|textMultiLine"
            android:background="@null"
            android:hint="@string/comment_composer_hint"
            android:textSize="17sp"
            android:textColor="@color/text_normal"
            android:importantForAutofill="no"
            />

        <com.mikepenz.iconics.view.IconicsTextView
            android:id="@+id/send_message_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/send_icon"
            android:textSize="44dp"
            android:textColor="@color/accent_color"
            />
    </LinearLayout>
</LinearLayout>
